# blespam-fixed

./: build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  google-services.json  obfuscation-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-secrets.cpp
app/src/main/res/anim/: button_elevation.xml  scale_animation.xml
app/src/main/res/drawable/: bg_gradient_white_orange.xml  bg_rounded_orange_button.xml  bg_rounded_orange_light.xml  bg_rounded_white_button_material.xml  button_gradient.xml  button_white_outline.xml  gradient_background.xml  ic_settings.xml  rounded_dialog_background.xml  rounded_edittext.xml  spinner_background.xml  spinner_gradient.xml  spinner_popup_background.xml  switch_selector.xml  track_selector.xml
app/src/main/res/drawable-night/: rounded_edittext.xml
app/src/main/res/layout/: activity_bug.xml  activity_bug_legacy.xml  activity_bug_material.xml  activity_main.xml  activity_main_legacy.xml  activity_main_material.xml  activity_settings.xml  activity_settings_legacy.xml  activity_settings_material.xml  activity_splash.xml  activity_splash_legacy.xml  activity_splash_material.xml  activity_update.xml  activity_update_legacy.xml  activity_update_material.xml  widget_spammer.xml
app/src/main/res/mipmap-anydpi-v26/: ic_bug_report_round.xml  ic_launcher.xml  ic_menu_night.xml  ic_menu_round.xml
app/src/main/res/values/: arrays.xml  (+10 more)
assets/: README_RU.md
gradle/wrapper/: gradle-wrapper.properties
(+73 files in other folders)
